--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.7.16</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
