--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,13 @@ spring:
     url: jdbc:mysql://localhost:3306/xiantao?characterEncoding=UTF-8
     username: root
     password: 123456
+  redis:
+    host: localhost
+    database: 4
+    port: 3306
   session:
     timeout: 86400
+    store-type: redis
 server:
   port: 8081
   servlet:
